--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -374,6 +374,8 @@ packages/react-components/react-utilities-compat/library @microsoft/cxe-prg
 packages/react-components/react-utilities-compat/stories @microsoft/cxe-prg
 packages/react-components/react-color-picker-preview/library @microsoft/cxe-prg
 packages/react-components/react-color-picker-preview/stories @microsoft/cxe-prg
+packages/react-components/token-analyzer-preview/library @microsoft/xc-uxe
+packages/react-components/token-analyzer-preview/stories @microsoft/xc-uxe
 # <%= NX-CODEOWNER-PLACEHOLDER %>
 
 ## Components
